[tool.poetry]
name = "lakeland-db-migrate-v4"
version = "0.6.7"
description = "Scripts for migrating data associated with the Lakeland Digital Archive project"
authors = ["Trevor Muñoz <tmunoz@umd.edu>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.3"
ipykernel = "^5.5.3"
pydocstyle = "^6.0.0"
lxml = "^4.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
